--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <div>
+        <h1>Alarm Clock</h1>
+    </div>
     <!-- Main Container -->
     <div class="main-container d-flex">
 
